--- a/eugene/doc/Doc_ProStart.tex
+++ b/eugene/doc/Doc_ProStart.tex
@@ -8,9 +8,9 @@ This plugin is dedicated to inject possible translation starts in prokaryote seq
 
 This sensor is activated by setting the value 1 for the parameter \texttt{Sensor.ProStart.use} in the parameter file.
 
-\texttt{ProStart.stackFile} and \texttt{ProStart.loopFile} : contain the energetic parameters for computing the RBS 
+\texttt{ProStart.stackFile} and \texttt{ProStart.loopFile} contain the energetic parameters for computing the RBS 
 (Shine-Delgarno) hybridization energy. (The file path is relative to EUGENEDIR/models).
-Taken and adapted from Turners website.
+It is taken and adapted from Turners website.
 \EuGene\ uses a simplified RNA binding model which ignores stabilizing loops (eg. tetraloops). 
 The algorithm is essentially a free end-gap global alignement algorithm that takes into account bulges, loops and helices.
 
@@ -23,9 +23,9 @@ If $E$ is the hybridization energy of the RBS, the following probability is used
 So, $\alpha$ gives a basic probability for a START to be used. For $\beta$, the
 higher it is, the stronger the influence of the RBS quality on the use of
 the corresponding START.  START probability is also affected by their type: 
-\texttt{atg} is the preferred START codon, then \texttt{gtg} and \texttt{ttg}.
+\texttt{ATG} is the preferred START codon, then \texttt{GTG} and \texttt{TTG}.
 
-Here is an example of ProStart parameters definition
+Here an example of ProStart parameters definition:
 
 \begin{Verbatim}[fontsize=\small]
 ProStart.matchlen 14
