Comment parameters linked to non canonical splice site prediction.

--- a/eugene/doc/Doc.tex
+++ b/eugene/doc/Doc.tex
@@ -383,6 +383,10 @@ ATG M +
 TGA *
 \end{Verbatim}
 
+\item \texttt{EuGene.NonCanDon}: list of allowed non canonical splice donor sites. (Separated by comma)
+
+\item \texttt{EuGene.NonCanAcc}: list of allowed non canonical splice acceptor sites. (Separated by comma)
+
 \item \texttt{Output.RemoveFrags}: in the text output, remove any 
 fragmentary gene prediction (missing ATG or STOP or both). The prediction
 process is unchanged,  the prediction is just filtered. \index{CmdFlags}{[Remove fragmentary proteins] F}
