Comment Est.CdsBoost parameter.

--- a/eugene/doc/Doc_Est.tex
+++ b/eugene/doc/Doc_Est.tex
@@ -27,6 +27,9 @@ The behavior of the plugin is controlled by the following parameters:
 \begin{itemize}
 \item \texttt{Est.estP*} indicates the penalty for violating a transcribed
   evidence.
+\item \texttt{Est.CdsBoost*} is a bonus used to enhance the score 
+  of the CDS regions which match with a transcribed evidence. 
+  Use to promote CDS regions instead of UTR regions.
 \item \texttt{Est.SpliceBoost*} is a bonus used to enhance the score 
   of predicted splice sites which appear at a hit/gap border of aligned 
   spliced ESTs.
