Add documentation for RibosomalFrameShift

--- a/eugene/doc/Doc.tex
+++ b/eugene/doc/Doc.tex
@@ -803,12 +803,14 @@ We now descrive each plugin, its behavior and parameters.
 \input{Doc_NStart.tex}
 \input{Doc_PatConst.tex}
 \input{Doc_PepSignal.tex}
+\input{Doc_RibosomalFrameShift.tex}
 \input{Doc_SMachine.tex}
 \input{Doc_SpliceWAM.tex}
 \input{Doc_SPred.tex}
 \input{Doc_StartWAM.tex}
 \input{Doc_Transcript.tex}
 \input{Doc_ProStart.tex}
+
 
 \subsection{\texttt{Content plugins}}
 \input{Doc_BlastX.tex}
