--- a/eugene/doc/Doc_Est.tex
+++ b/eugene/doc/Doc_Est.tex
@@ -37,6 +37,11 @@ The behavior of the plugin is controlled by the following parameters:
   splice site is detected on the border of transcribed evidence. Note that 
   non canonical splice sites are researched only if \texttt{EuGene.NonCanAcc} 
   and/or \texttt{EuGene.NonCanDon} are defined.
+\item \texttt{Est.SpliceStartP} is the penalty affected if a spliced start 
+codon is detected on the frontier of the first and the second match region 
+in a genomic spliced alignment. Note that the minimum length of the first 
+coding exon has to be 1 nt to allow the detection of spliced start. (check 
+the value in \texttt{EuGene.InitExDist} file)
 \item \texttt{Est.estM} gives the amount of ``fuzzyness'' allowed in
   interpreting a hit/gap border. The nucleotides which are less than
   \texttt{Est.estM} nucleotides away from this border are considered
