Add sallet as author

--- a/eugene/AUTHORS
+++ b/eugene/AUTHORS
@@ -1,13 +1,14 @@
 Authors of eugene.
 See also the files THANKS and ChangeLog.
 
-Thomas Schiex <tschiex@toulouse.inra.fr> designed and implemented eugene.
+Thomas Schiex <tschiex@toulouse.inra.fr> designed and implemented EuGene.
+Erika Sallet <erika.sallet@toulouse.inra.fr>
+Jérome Gouzy <gouzy@toulouse.inra.fr>
 
 Other INRA persons contributed to the software:
 Philippe Bardou <bardou@toulouse.inra.fr>
 Marie-Josée Cros <cros@toulouse.inra.fr>
 Sylvain Foissac <foissac@toulouse.inra.fr>
-Jérome Gouzy <gouzy@toulouse.inra.fr>
 Annick Moisan <moisan@toulouse.inra.fr>
 
 Non permanent INRA staff:
