log the gff3 output changes.

--- a/eugene/ChangeLog
+++ b/eugene/ChangeLog
@@ -1,4 +1,14 @@
+-------------------------------------------------------------------------------
+v4.1c released Sept. 2014
+-------------------------------------------------------------------------------
 
+Improve GFF3 output format: remove ending tab.
+	
+-------------------------------------------------------------------------------
+v4.1c released Janv. 2014
+-------------------------------------------------------------------------------
+
+non canonical splice sites allowed
 
 -------------------------------------------------------------------------------
 v4.0a released Juil. 2011
