Remove outdated QuickStart documentation

--- a/eugene/doc/Doc.tex
+++ b/eugene/doc/Doc.tex
@@ -63,6 +63,7 @@
   The software called \texttt{eugene} is written in C++ and is distributed 
   under the artistic license.
  \end{abstract}
+\iffalse
 
 \chapter{Quick Start}
 
@@ -251,17 +252,17 @@ see section~\ref{blastxlabel}.
 EXECUTION_TRACE5
 \end{Verbatim}
 
-
-
 \newpage
+\fi
+
 \chapter{Reference documentation}
 
 To be executed, \EuGene\ needs at least one file: this is the
 so-called parameter file. \EuGene\ behavior is entirely controlled
 by a set of parameters whose default values are available in this
 file. These default values can be altered by editing this file or for
-some values through flags in the command line (such as \texttt{-d},
-see the quick start chapter). Command line flags override any value in the parameter
+some values through flags in the command line (such as \texttt{-d}). 
+Command line flags override any value in the parameter
 file. The name of the parameter file that \EuGene\ seeks is obtained
 by adding the suffix ``\texttt{.par}'' to the name of the \EuGene\ 
 command itself.  As it is distributed, \EuGene\ command's name is
