--- a/eugene/AUTHORS
+++ b/eugene/AUTHORS
@@ -1,9 +1,9 @@
 Authors of eugene.
 See also the files THANKS and ChangeLog.
 
-Thomas Schiex <tschiex@toulouse.inra.fr> designed and implemented EuGene.
-Erika Sallet <erika.sallet@toulouse.inra.fr>
-Jérome Gouzy <gouzy@toulouse.inra.fr>
+Thomas Schiex <thomas.schiex@inrae.fr> designed and implemented EuGene.
+Erika Sallet <erika.sallet@inrae.fr>
+Jérome Gouzy <jerome.gouzy@inrae.fr>
 
 Other INRA persons contributed to the software:
 Philippe Bardou <bardou@toulouse.inra.fr>
