--- a/eugene/ChangeLog
+++ b/eugene/ChangeLog
@@ -1,3 +1,10 @@
+
+-------------------------------------------------------------------------------
+v4.2b released Sep. 2020
+-------------------------------------------------------------------------------
+
+In the Est plugin change the way the transcript strand is chosen. Previously ejected transcripts are now kept.
+
 -------------------------------------------------------------------------------
 v4.2a released Dec. 2016
 -------------------------------------------------------------------------------
