--- a/eugene/ChangeLog
+++ b/eugene/ChangeLog
@@ -1,5 +1,11 @@
 
 -------------------------------------------------------------------------------
+v4.2c released May, 2021
+-------------------------------------------------------------------------------
+
+Use -k flag or AltEst.Reference to load a reference annotation and predict splicing variants. Improve performance to perform variant prediction.
+
+-------------------------------------------------------------------------------
 v4.2b released Sep. 2020
 -------------------------------------------------------------------------------
 
