Updated AUTHORS from git log

--- a/eugene/AUTHORS
+++ b/eugene/AUTHORS
@@ -10,6 +10,7 @@ Philippe Bardou <bardou@toulouse.inra.fr>
 Marie-Josée Cros <cros@toulouse.inra.fr>
 Sylvain Foissac <foissac@toulouse.inra.fr>
 Annick Moisan <moisan@toulouse.inra.fr>
+Damien Leroux <Damien.Leroux@inra.fr>
 
 Non permanent INRA staff:
 Céline Noirot <cnoirot@toulouse.inra.fr>
